[package]
name = "realm"
version = "0.1.18"
authors = ["Amit Upadhyay <amitu@acko.com>"]
description = "Rust / Elm base full stack web framework."
license = "MIT"
edition = "2018"
include = ["**/*.rs", "Cargo.toml"]
readme = "README.md"
repository = "https://github.com/ackotech/realm"
documentation = "https://github.com/ackotech/realm"
homepage = "https://github.com/ackotech/realm"

[features]
default = []
dynamic-elm-dependencies = []

[dependencies]
hyper = "0.12.33"
futures-cpupool = "0.1.8"
lazy_static = "1"
futures = "0.1.26"
http = "0.1.18"
serde_json = "~1.0.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
failure = "~0.1.1"
url = "~1"
itertools = "~0.7.8"
notify = "=5.0.0-pre.1"
crossbeam-channel = "0.3.9"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
byteorder = "~1.3.2"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
cookie = { version = "0.12.0", features = ["percent-encode"] }
signed_cookies = "0.1.2"
bcrypt = "0.5.0"
colored = "~1.8.0"
syntect = "3.2.1"
antidote = "1.0.0"
askama = "0.8"
woothee = "0.10"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dev-dependencies]
pretty_assertions = "~0.5.1"
